<resources>
    <string name="app_name" translatable="false">Velez-Malaga Info</string>
    <string name="creador" translatable="false">vmalagainfo@gmail.com</string>
    <string name="problema" translatable="false">Problema con la aplicación VelezMalaga-Info</string>
    <string name="enviar">Enviar correo electrónico</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="seleccionar">Seleccione un idioma</string>
    <string name="action_settings">Cambiar idioma</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="Velez" translatable="false">Vélez-Málaga</string>
    <string name="Torre" translatable="false">Torre del Mar</string>
    <string name="Almayate" translatable="false">Almayate</string>
    <string name="Caleta" translatable="false">Caleta de Vélez</string>
    <string name="Benajarafe" translatable="false">Benajarafe</string>
    <string name="Chilches" translatable="false">Chilches</string>
    <string name="Lagos" translatable="false">Lagos</string>
    <string name="info">Información sobre el pueblo.</string>
    <string name="info_general">Información general</string>
    <string name="tlf">Telefonos útiles</string>
    <string name="playas">Estado de las playas</string>
    <string name="historia">Historia del pueblo</string>
    <string name="noticias">Noticias</string>
    <string name="transporte">Transporte</string>
    <string name="puntos">Monumentos destacados</string>
    <string name="transporte_cercano">Transportes cercanos</string>
    <string name="compras">Zonas para comprar</string>
    <string name="comer">Zonas para comer</string>
    <string name="desarrollo">En desarrollo</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="cortes">Cortes de tráfico</string>
    <string name="prediccion">Predicción</string>
    <string name="dia">Día</string>
    <string name="oleaje">Oleaje</string>
    <string name="viento">Viento</string>
    <string name="sensacion_termica">Sensación termica</string>
    <string name="uv_max">UV máximo</string>
    <string name="estado_cielo">Estado del cielo</string>
    <string name="temp_maxima">Temperatura máxima</string>
    <string name="temp_agua">Temperatura del agua</string>
    <string name="mañana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="esperando">Esperando la informacion</string>
    <string name="xml_tiempo" translatable="false">http://www.aemet.es/xml/playas/play_v2_2909406.xml</string>
    <string name="url_trafico" translatable="false">http://www.velezmalaga.es/index.php?mod=policia_local_proteccion_ci&amp;tag=cortes-de-trafico</string>
    <string name="url_noticias" translatable="false">http://www.velezmalaga.es/index.php?mod=noticias</string>
    <string name="url_base" translatable="false">http://www.velezmalaga.es/</string>
    <string name="no_conexion">No se ha podido descargar la información, compruebe su conexión a Internet.</string>
    <string name="logo_del_pueblo">Logo del pueblo</string>
    <string name="no_info">No hay información disponible en este momento.</string>
    <string name="atencion">Teléfonos de atención ciudadana:</string>
    <string-array name="atencionciudadana">

        <item name="Vélez-Málaga">900 72 05 25</item>
        <item name="Torre Del Mar">952 54 04 71</item>
        <item name="Caleta">952 00 22 32</item>
        <item name="Almayate">952 55 64 13</item>
        <item name="Benajarafe">952 51 38 27</item>
        <item name="Cajiz">952 51 06 71</item>
        <item name="Chilches">952 51 71 24</item>
        <item name="Mezquitilla">952 55 02 83</item>
    </string-array>
    <string name="taxis">Teléfonos de taxis:</string>
    <string name="mi_localizacion">Mi localizacion</string>
    <string name="siguiente">Siguiente</string>
    <string name="communicate">Ayuda</string>
    <string name="ayuda">Enviar mail</string>
    <string-array name="taxis_tlf">
        <item>622 02 20 40</item>
        <item>650 92 09 58</item>
        <item>659 15 50 54</item>
    </string-array>
    <string name="atencionciudadana">Atención ciudadana</string>
</resources>
