<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/velez"
            android:title="@string/Velez" />
        <item
            android:id="@+id/torre"
            android:title="@string/Torre" />
        <item
            android:id="@+id/caleta"
            android:title="@string/Caleta" />
        <item
            android:id="@+id/almayate"
            android:title="@string/Almayate" />
        <item
            android:id="@+id/benajarafe"
            android:title="@string/Benajarafe" />
        <item
            android:id="@+id/chilches"
            android:title="@string/Chilches" />

        <item
            android:id="@+id/lagos"
            android:title="@string/Lagos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
