<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/linearLayout">
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#ffffff"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_puntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/puntos"
            fancy:fb_textColor="#FFFFFF">
        </mehdi.sakout.fancybuttons.FancyButton>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#ffffff"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_cercano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/transporte_cercano"
            fancy:fb_textColor="#FFFFFF">
        </mehdi.sakout.fancybuttons.FancyButton>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#ffffff"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/compras"
            fancy:fb_textColor="#FFFFFF">
        </mehdi.sakout.fancybuttons.FancyButton>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#ffffff"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_del_pueblo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>